# RTD

./: CMakeLists.txt
client/: CMakeLists.txt  config.json
client/resources/: CMakeLists.txt  resources.qrc
client/resources/images/: placeholder.sh
client/resources/styles/: dark.qss  main.qss
client/src/: ApiClient.cpp  ApiClient.h  MainWindow.cpp  MainWindow.h  apiclient.cpp  apiclient.h  createtaskdialog.cpp  createtaskdialog.h  dispatchwidget.cpp  dispatchwidget.h  equipmentwidget.cpp  equipmentwidget.h  lotwidget.cpp  lotwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  models.cpp  models.h
client/src/models/: DispatchModel.cpp  DispatchModel.h  EquipmentModel.cpp  EquipmentModel.h  GenericTableModel.cpp  GenericTableModel.h  LotModel.cpp  LotModel.h
client/src/ui/: createtaskdialog.ui  dispatchwidget.ui  equipmentwidget.ui  lotwidget.ui  mainwindow.ui
client/src/utils/: StyleHelper.cpp  StyleHelper.h
client/src/views/: DispatchView.cpp  DispatchView.h  EquipmentListView.cpp  EquipmentListView.h  LotListView.cpp  LotListView.h
schedule/: CMakeLists.txt
schedule/config/: api.json
schedule/config/dsn/: postgresql.dsn
schedule/include/: job_scheduler.h  job_scheduler_impl.h  schedule_chromosome.h  schedule_data_manager.h  schedule_evaluator.h
schedule/include/algorithm/: archipelago_ga.hh
schedule/src/: job_scheduler_impl.cpp  main.cpp  schedule_chromosome.cpp  schedule_data_manager.cpp  schedule_evaluator.cpp
server/: CMakeLists.txt  test_api.sh
server/config/: api.json  config.json  data_source.json  database.json  server.json
server/config/dsn/: oracle.dsn
server/include/: api_handler.h  db_manager.h  http_server.h
server/src/: CMakeLists.txt  Server.cpp  Server.h  api_handler.cpp  db_manager.cpp  http_server.cpp  main.cpp
server/src/api/: ApiManager.cpp  ApiManager.h
server/src/config/: ConfigManager.cpp  ConfigManager.h
server/src/db/: ConnectionPool.cpp  ConnectionPool.h  DatabaseManager.cpp  DatabaseManager.h  QueryExecutor.cpp  QueryExecutor.h
server/src/http/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h
